--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -4,3 +4,11 @@
 * Return to groups and select your group
 
 ![](/Cloud/img-cloud/pro025.png)
+
+* Click in Requires agent installation
+
+![](/Cloud/img-cloud/pro026.png)
+
+* Click in Configure Log Analytics workspace and select Your Log Analytics workspace created before
+
+![](/Cloud/img-cloud/pro027.png)
