--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -1,6 +1,6 @@
 ## Azure Migrate
 
-* Install agents on VMs to validate all dependencies between the connection servers between them.
+* Install agents on VMs to validate all dependencies between the connection servers between them and inventory.
 * Return to groups and select your group
 
 ![](/Cloud/img-cloud/pro025.png)
@@ -9,6 +9,34 @@
 
 ![](/Cloud/img-cloud/pro026.png)
 
-* Click in Configure Log Analytics workspace and select Your Log Analytics workspace created before
+* Click in Configure Log Analytics workspace and select Your Log Analytics workspace created before, and click Configure
 
 ![](/Cloud/img-cloud/pro027.png)
+
+* Download the installer (step 1 and step 2)for Windows on each VM (SRV-WEB and SRV-SQL) and take note on step 3 Workspace ID and Workspace key.
+
+* After download, now can install the agents, starting with MMA agent.
+
+* Execute the installer and Click in Next, after click in I Agree, Next too, Ckeck : Connect the agent to Azure log Analytics (OMS) and Next.
+
+* Complete with the data you wrote down and Next, Next Too and Install.
+
+![](/Cloud/img-cloud/pro028.png)
+
+* Install dependency tools is only click in I Agree and Finish
+
+* Repeat all steps in another server Windows,
+
+## Migration
+
+* Now we can prepare the migration
+
+* Return to Azure Migrate, Servers, databases and web apps
+
+* In Migration Tool, click in Discover
+
+![](/Cloud/img-cloud/pro029.png)
+
+* complete with the same information, and click in Create Resources
+
+![](/Cloud/img-cloud/pro030.png)
