--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -37,6 +37,13 @@
 
 ![](/Cloud/img-cloud/pro029.png)
 
-* complete with the same information, and click in Create Resources
+* complete with the same information, and click in Create Resources. It will creates an Azure Recovery Services vaults
 
 ![](/Cloud/img-cloud/pro030.png)
+
+* Click the Download button to download the Azure Site Recovery Provider Configuration registration key and send it to the Hyper-V server
+
+* Download the installer of [Azure Site Recovery Provider](https://aka.ms/downloaddra_eus)
+
+![](/Cloud/img-cloud/pro031.png)
+
