--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -47,3 +47,12 @@
 
 ![](/Cloud/img-cloud/pro031.png)
 
+* Open the installer, select On and Next, After click in Install. Now click in Register.
+
+![](/Cloud/img-cloud/pro032.png)
+
+* Select the registration key and Next. In Proxy settings select : Connect directly, Next.
+
+![](/Cloud/img-cloud/pro033.png)
+
+
