--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -51,8 +51,14 @@
 
 ![](/Cloud/img-cloud/pro032.png)
 
-* Select the registration key and Next. In Proxy settings select : Connect directly, Next.
+* Select the registration key and Next. In Proxy settings select : Connect directly, Next. Wait to finish the registration
 
 ![](/Cloud/img-cloud/pro033.png)
+
+![](/Cloud/img-cloud/pro034.png)
+
+* Update the page to enable the Finalize Registration bot, turn it on to start, and start the process normally.
+
+![](/Cloud/img-cloud/pro035.png)
 
 
