--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -57,8 +57,16 @@
 
 ![](/Cloud/img-cloud/pro034.png)
 
-* Update the page to enable the Finalize Registration bot, turn it on to start, and start the process normally.
+* Refresh the page to enable the Finalize Registration button, if you return to the beginning, fill in the data normally. After click in Finalize Registration
 
 ![](/Cloud/img-cloud/pro035.png)
+
+* Go back to Azure Migrate, Servers, databases and web apps and select Replicate in Migration tools. Complete with this information and click in Continue
+
+![](/Cloud/img-cloud/pro036.png)
+
+* Complete with your information and select only SRV-WEB, we will migrate the servers in stages, as there will be one for each subnet.
+
+![](/Cloud/img-cloud/pro037.png)
 
 
