--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -69,4 +69,16 @@
 
 ![](/Cloud/img-cloud/pro037.png)
 
+* Complete with this information and click in Continue and Next
 
+![](/Cloud/img-cloud/pro038.png)
+
+* Select the VM resource in Azure, and click Next
+
+![](/Cloud/img-cloud/pro039.png)
+
+* Select the disks and Disk Type, Next
+
+![](/Cloud/img-cloud/pro040.png)
+
+* Complete the tag and Review + Start replication, click in Replicate 
