--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -82,3 +82,11 @@
 ![](/Cloud/img-cloud/pro040.png)
 
 * Complete the tag and Review + Start replication, click in Replicate 
+
+* Perform the same process for SRV-SQL, only change the subnet to subnet-db
+
+* After start the replication, in Azure Migrate, Servers, databases and web apps, Migration tools click in Overview.
+
+* Here you can verify the status of migration
+
+![](/Cloud/img-cloud/pro041.png)
