--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -87,6 +87,6 @@
 
 * After start the replication, in Azure Migrate, Servers, databases and web apps, Migration tools click in Overview.
 
-* Here you can verify the status of migration
+* Here you can verify the status of migration, here it may take several minutes.
 
 ![](/Cloud/img-cloud/pro041.png)
