--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -90,3 +90,7 @@
 * Here you can verify the status of migration, here it may take several minutes.
 
 ![](/Cloud/img-cloud/pro041.png)
+
+* Wait more time
+
+![](/Cloud/img-cloud/pro042.png)
