--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -94,3 +94,7 @@
 * Wait more time
 
 ![](/Cloud/img-cloud/pro042.png)
+
+* Now the servers have been replicated
+
+![](/Cloud/img-cloud/pro043.png)
