--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -98,3 +98,13 @@
 * Now the servers have been replicated
 
 ![](/Cloud/img-cloud/pro043.png)
+
+* Now we can use the Recovery Services vault the manage the replication, find in Azure Portal Recovery Services vault and select the one created before.
+
+* In Recovery Services vault select Replicated items.
+
+![](/Cloud/img-cloud/pro044.png)
+
+* Select a server to see the information about the replication
+
+![](/Cloud/img-cloud/pro045.png)
