--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -99,7 +99,7 @@
 
 ![](/Cloud/img-cloud/pro043.png)
 
-* Now we can use the Recovery Services vault the manage the replication, find in Azure Portal Recovery Services vault and select the one created before.
+* Now we can use the Recovery Services vault the manage the replication, find in Azure Portal Recovery Services vault and select the one created before. Here we can find all the settings, rules, schedules and replication history.
 
 * In Recovery Services vault select Replicated items.
 
