--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -108,3 +108,6 @@
 * Select a server to see the information about the replication
 
 ![](/Cloud/img-cloud/pro045.png)
+
+
+ Continued in [03.02-Azure-Migrate ](
