--- a/Cloud/03.01-Azure-Migrate.md
+++ b/Cloud/03.01-Azure-Migrate.md
@@ -110,4 +110,4 @@
 ![](/Cloud/img-cloud/pro045.png)
 
 
- Continued in [03.02-Azure-Migrate ](
+ Continued in [03.02-Azure-Migrate ](https://github.com/rafamellonh/AzureMigrate/blob/main/Cloud/03.02-Azure-Migrate.md)
