--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -1,1 +1,19 @@
 ## Azure Migrate
+
+* We can make a migration test before to execute the final migration
+
+* Recovery Services vault select Replicated items and select the SRV-WEB and click in Test Migration
+
+![](/Cloud/img-cloud/pro046.png)
+
+* In Test Migration select the Vnet VNET-RM-TMP created before and clieck in Test Migration
+
+![](/Cloud/img-cloud/pro047.png)
+
+* Wait until a copy of the server is created so that we can test it, you can follow the status in the same panel, after finishing. You can go to virtual machines and check that the server is there.
+
+![](/Cloud/img-cloud/pro048.png)
+
+* Click in Initiating test failover
+
+![](/Cloud/img-cloud/pro049.png)
