--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -6,7 +6,7 @@
 
 ![](/Cloud/img-cloud/pro046.png)
 
-* In Test Migration select the Vnet VNET-RM-TMP created before and clieck in Test Migration
+* In Test Migration select the Vnet VNET-RM-TMP created before and click in Test Migration
 
 ![](/Cloud/img-cloud/pro047.png)
 
