--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -18,3 +18,38 @@
 
 
 ![](/Cloud/img-cloud/pro049.png)
+
+
+* In VMs, we can ckeck that the server is online to test : 
+
+![](/Cloud/img-cloud/pro050.png)
+
+* Click on SRV-WEB-test and after click in Bastion and enter your credentials and click Connect to connect to the server and validate it.
+
+![](/Cloud/img-cloud/pro051.png)
+
+* Validate if all is good
+
+![](/Cloud/img-cloud/pro052.png)
+
+* Now click in Cleanup Test Failover
+
+![](/Cloud/img-cloud/pro053.png)
+
+* Add a note and click in Cleanup Test
+
+* In Azure Migrate, Servers, databases and web apps, Migration tools click in Migrate
+
+* Select Azure Vm
+
+![](/Cloud/img-cloud/pro054.png)
+
+* Select Yes and select the server and click in Migrate
+
+![](/Cloud/img-cloud/pro055.png)
+
+* In Recovery Services vault, Replicated items you can follow the process, Select Planned failover was initiated on each server
+
+![](/Cloud/img-cloud/pro056.png)
+
+![](/Cloud/img-cloud/pro057.png)
