--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -53,3 +53,8 @@
 ![](/Cloud/img-cloud/pro056.png)
 
 ![](/Cloud/img-cloud/pro057.png)
+
+* Now we can see Planned failover finished, so the replication was finished
+
+![](/Cloud/img-cloud/pro058.png)
+
