--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -58,3 +58,12 @@
 
 ![](/Cloud/img-cloud/pro058.png)
 
+* Check on hyper-v if the servers migrated are off.
+
+![](/Cloud/img-cloud/pro060.png)
+
+* Now we will return to Application Gateway to configure the backend.
+
+* In application Gateway, select Backend setting and click on the rule 
+
+![](/Cloud/img-cloud/pro059.png)
