--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -64,6 +64,10 @@
 
 * Now we will return to Application Gateway to configure the backend.
 
-* In application Gateway, select Backend setting and click on the rule 
+* In application Gateway, select pools setting and click on the backend-app 
 
 ![](/Cloud/img-cloud/pro061.png)
+
+* Select Virtual Machine and set the SRV-WEB in target
+
+![](/Cloud/img-cloud/pro062.png)
