--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -68,6 +68,10 @@
 
 ![](/Cloud/img-cloud/pro061.png)
 
-* Select Virtual Machine and set the SRV-WEB in target
+* Select Virtual Machine and set the SRV-WEB in target and save
 
 ![](/Cloud/img-cloud/pro062.png)
+
+* In Recovery Services vault, Replicated items in each server you can Commit and complete the migrationg or change a recovery point
+
+![](/Cloud/img-cloud/pro063.png)
