--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -72,6 +72,16 @@
 
 ![](/Cloud/img-cloud/pro062.png)
 
-* In Recovery Services vault, Replicated items in each server you can Commit and complete the migrationg or change a recovery point
+* In Recovery Services vault, Replicated items in each server you can Commit and complete the migrating or change a recovery point, repeat on SRV-SQL
 
 ![](/Cloud/img-cloud/pro063.png)
+
+* You can take the Application Gateway IP and configure one CNAME in your DNS
+
+![](/Cloud/img-cloud/ip.png)
+
+![](/Cloud/img-cloud/dns.png)
+
+* Now verify the website
+
+![](/Cloud/img-cloud/site01.png)
