--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -64,11 +64,11 @@
 
 * Now we will return to Application Gateway to configure the backend.
 
-* In application Gateway, select pools setting and click on the backend-app 
+* In application Gateway, select backend pools and click on the backend-app 
 
 ![](/Cloud/img-cloud/pro061.png)
 
-* Select Virtual Machine and set the SRV-WEB in target and save
+* Select NO and after select Machine and set the SRV-WEB in target and save
 
 ![](/Cloud/img-cloud/pro062.png)
 
