--- a/Cloud/03.02-Azure-Migrate.md
+++ b/Cloud/03.02-Azure-Migrate.md
@@ -72,7 +72,7 @@
 
 ![](/Cloud/img-cloud/pro062.png)
 
-* In Recovery Services vault, Replicated items in each server you can Commit and complete the migrating or change a recovery point, repeat on SRV-SQL
+* In Recovery Services vault, Replicated items in each server you can Commit and complete the migrating or change a recovery point.
 
 ![](/Cloud/img-cloud/pro063.png)
 
